<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#f8f8f8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/gray_f2f2f2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:tabTextAppearance="@style/tab_text"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            app:tabSelectedTextColor="@color/white"
                            app:tabIndicatorHeight="0dp"
                            app:tabIndicatorFullWidth="false"
                            app:tabBackground="@drawable/select_rectangle_round_gray_575bb2"
                            app:tabMode="scrollable"
                            app:tabTextColor="@color/gray_555555">

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/customer_tab_gongji" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/customer_tab_service" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/customer_tab_faq" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/customer_tab_one_and_one" />
                        </com.google.android.material.tabs.TabLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/subFragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar_login"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="#FFFFFF">


            <kr.co.koscom.omp.view.MyToolbarView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="44dp"/>

        </com.google.android.material.appbar.AppBarLayout>

        <kr.co.koscom.omp.view.MyBottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <FrameLayout
        android:id="@+id/nav_view"
        android:layout_width="232dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>




